# rush

./: Cargo.toml  README.md  new.md  rusty-tags.vi
src/: builtin.rs  error.rs  main.rs  parser.rs  tests.rs
tests/: rush.rs
